0.22.0 (unreleased)
-------------------
 - Force the soap:address / http:address to HTTPS when the wsdl is loaded from
   a https url (#228)
 - Improvements to the xsd:union handling. The matching base class is now used
   for serializing/deserializing the values. If there is no matching base class 
   then the raw value is returned. (#195)


0.21.0 (2016-11-02)
-------------------
 - Don't error on empty xml namespaces declarations in inline schema's (#186)
 - Wrap importing of sqlite3 in try..except for Google App Engine (#243)
 - Don't use pkg_resources to determine the zeep version, use __version__ 
   instead (#243).
 - Fix SOAP arrays by wrapping children in the appropriate element 
   (joeribekker, #2360)
 - Add ``operation_timeout`` kwarg to the Transport class to set timeouts for
   operations. The default is still no timeout (#140)
 - Introduce client.options context manager to temporarily override various
   options (only timeout for now) (#140)
 - Wrap the parsing of xml values in a try..except block and log an error 
   instead of throwing an exception (#137)
 - Fix xsd:choice xml rendering with nested choice/sequence structure (#221)
 - Correctly resolve header elements of which the message part defines the
   type instead of element. (#199)


0.20.0 (2016-10-24)
-------------------
 - Major performance improvements / lower memory usage. Zeep now no longer
   copies data and alters it in place but instead uses a set to keep track of 
   modified data.
 - Fix parsing empty soap response (#223)
 - Major refactor of the xsd:extension / xsd:restriction implementation.
 - Better support for xsd:anyType, by re-using the xsd.AnyObject (#229)
 - Deserialize SOAP response without message elements correctly (#237)


0.19.0 (2016-10-18)
-------------------
 - **backwards-incompatible**: If the WSDL defines that the endpoint returns
   soap:header elements and/or multple soap:body messages then the return